[feat] 26802: Styling fix for logo and widget on mobile devices

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -10,6 +10,7 @@
 @dark_theme__color: @main__color;
 @light_theme_main__color: @main__color;
 @light_theme__color: @sub__color;
+@screen__m: 768px;
 
 .in3 {
     position: relative;
@@ -163,8 +164,8 @@
             margin: 0 -10px 0 -8px;
 
             .in3-widget {
-                min-height: 30px;
                 margin: 3px 0;
+                min-height: 30px;
                 width: calc(~'100% - 10px');
 
                 p {
@@ -189,6 +190,28 @@
 
         &-tooltip {
             margin: 0 10px 30px;
+        }
+    }
+}
+
+@media only screen and (max-width: @screen__m) {
+    .in3 {
+        i {
+            &.logo {
+                margin-left: 0;
+            }
+        }
+    }
+
+    .checkout-cart-index {
+        .cart-summary {
+            .in3 {
+                margin-left: 5px;
+
+                .in3-widget {
+                    width: 90%;
+                }
+            }
         }
     }
 }
